force-app/main/default/objects/Opportunity/fields/Agente_Asignado_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Agente_Asignado_Inicial__c</fullName>
    <label>Agente AI asignado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ana</fullName>
            </value>
            <value>
                <fullName>Camila</fullName>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>Oli</fullName>
            </value>
            <value>
                <fullName>Renata</fullName>
            </value>
            <value>
                <fullName>SDR Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>