force-app/main/default/objects/Opportunity/fields/Ano_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Ano_vehiculo__c</fullName>
    <label>Año vehículo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>