force-app/main/default/objects/Opportunity/fields/Aseguradora_Competidora__c.field-meta.xml
<CustomField>
    <fullName>Aseguradora_Competidora__c</fullName>
    <label>Aseguradora competidora</label>
    <length>120</length>
    <type>Text</type>
</CustomField>