force-app/main/default/objects/Opportunity/fields/Canal_Origen__c.field-meta.xml
<CustomField>
    <fullName>Canal_Origen__c</fullName>
    <label>Origen / Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tienda Digital</fullName>
            </value>
            <value>
                <fullName>Consultivo</fullName>
            </value>
            <value>
                <fullName>Promotoría</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
            <value>
                <fullName>Cross-sell</fullName>
            </value>
            <value>
                <fullName>Reactivación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>