force-app/main/default/objects/Opportunity/fields/Cashback_Aplicado__c.field-meta.xml
<CustomField>
    <fullName>Cashback_Aplicado__c</fullName>
    <description>Monto que se descontó al asegurado referido (modelo C de D-01).</description>
    <label>Cashback aplicado</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>