force-app/main/default/objects/Opportunity/fields/Codigo_Referidor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Referidor__c</fullName>
    <description>Codigo corto (ej. OLL-MR-0471) para rastreo manual cuando no hay link tracker.</description>
    <externalId>true</externalId>
    <label>Codigo referidor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>