force-app/main/default/objects/Opportunity/fields/Comision__c.field-meta.xml
<CustomField>
    <fullName>Comision__c</fullName>
    <label>Comisión Ollin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>