force-app/main/default/objects/Opportunity/fields/Contratista__c.field-meta.xml
<CustomField>
    <fullName>Contratista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratista</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Contratista)</relationshipLabel>
    <relationshipName>Oportunidades_Contratista</relationshipName>
    <type>Lookup</type>
</CustomField>