force-app/main/default/objects/Opportunity/fields/Cotizacion_Externa_Id__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_Externa_Id__c</fullName>
    <label>Cotizacion Externa Id</label>
    <type>TextArea</type>
</CustomField>