force-app/main/default/objects/Opportunity/fields/Es_Referido__c.field-meta.xml
<CustomField>
    <fullName>Es_Referido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True si esta oportunidad vino por referencia. Disparador para bonificaciones D-01.</description>
    <label>Es referido</label>
    <type>Checkbox</type>
</CustomField>