force-app/main/default/objects/Opportunity/fields/Familia_Producto__c.field-meta.xml
<CustomField>
    <fullName>Familia_Producto__c</fullName>
    <label>Familia de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
            <value>
                <fullName>GMM</fullName>
                <label>GMM / Gastos Médicos</label>
            </value>
            <value>
                <fullName>Danos</fullName>
                <label>Daños</label>
            </value>
            <value>
                <fullName>Fianzas</fullName>
            </value>
            <value>
                <fullName>Membresia</fullName>
                <label>Membresía Ollin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>