force-app/main/default/objects/Opportunity/fields/Fecha_Fin_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_Vigencia__c</fullName>
    <label>Fecha Fin Vigencia</label>
    <type>Date</type>
</CustomField>