force-app/main/default/objects/Opportunity/fields/Fecha_Inicio_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Vigencia__c</fullName>
    <label>Fecha Inicio Vigencia</label>
    <type>Date</type>
</CustomField>