force-app/main/default/objects/Opportunity/fields/Handoff_A_Humano_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Handoff_A_Humano_Timestamp__c</fullName>
    <label>Fecha handoff a humano</label>
    <type>DateTime</type>
</CustomField>