force-app/main/default/objects/Opportunity/fields/Handoff_Motivo__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Motivo__c</fullName>
    <label>Motivo del handoff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICP alto</fullName>
            </value>
            <value>
                <fullName>Solicitud explicita</fullName>
            </value>
            <value>
                <fullName>Tema fuera de alcance</fullName>
            </value>
            <value>
                <fullName>Asegurado complejo</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Error tecnico</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>