force-app/main/default/objects/Opportunity/fields/Handoff_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Solicitado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disparador que setea el agente AI cuando decide escalar a humano.</description>
    <label>Handoff solicitado</label>
    <type>Checkbox</type>
</CustomField>