force-app/main/default/objects/Opportunity/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <description>Primera URL visitada por el prospecto.</description>
    <label>Landing Page</label>
    <type>Url</type>
</CustomField>