force-app/main/default/objects/Opportunity/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Modelo vehículo</label>
    <type>TextArea</type>
</CustomField>