force-app/main/default/objects/Opportunity/fields/Motivo_Cierre_Perdido__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Cierre_Perdido__c</fullName>
    <label>Motivo cierre perdido</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Competencia</fullName>
            </value>
            <value>
                <fullName>No calificó</fullName>
            </value>
            <value>
                <fullName>No interesado</fullName>
            </value>
            <value>
                <fullName>Sin respuesta</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>