force-app/main/default/objects/Opportunity/fields/Motivo_No_Renovacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_No_Renovacion__c</fullName>
    <label>Motivo No Renovación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>