force-app/main/default/objects/Opportunity/fields/Motivo_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Perdida__c</fullName>
    <label>Motivo cierre perdido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Cobertura insuficiente</fullName>
            </value>
            <value>
                <fullName>Compra con competidor</fullName>
            </value>
            <value>
                <fullName>No contactado</fullName>
            </value>
            <value>
                <fullName>No interesado</fullName>
            </value>
            <value>
                <fullName>Posterga decisión</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>