force-app/main/default/objects/Opportunity/fields/Nivel_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Asignacion__c</fullName>
    <description>Registra que nivel 1-4 del Flow de asignacion disparo el owner.</description>
    <label>Nivel de asignacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Reglas de negocio</fullName>
            </value>
            <value>
                <fullName>2 - Ramo + geografia</fullName>
            </value>
            <value>
                <fullName>3 - ICP alto</fullName>
            </value>
            <value>
                <fullName>4 - Ecosistema AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>