force-app/main/default/objects/Opportunity/fields/Notas_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Notas_Vendedor__c</fullName>
    <label>Notas del vendedor</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>