force-app/main/default/objects/Opportunity/fields/Numero_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Numero_Pagos__c</fullName>
    <label>Numero Pagos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>