force-app/main/default/objects/Opportunity/fields/Originador__c.field-meta.xml
<CustomField>
    <fullName>Originador__c</fullName>
    <description>Origen/canal que originó la oportunidad. Reemplaza Fuente_Original__c para alinear con la nomenclatura del Módulo de Gestión (tres caminos de entrada: Digital, Consultivo, Promotoría).</description>
    <label>Originador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meta Ads</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Tiktok Ads</fullName>
            </value>
            <value>
                <fullName>Organico Web</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
            <value>
                <fullName>Llamada Directa</fullName>
            </value>
            <value>
                <fullName>WhatsApp Directo</fullName>
            </value>
            <value>
                <fullName>Renovacion</fullName>
            </value>
            <value>
                <fullName>Cross-sell</fullName>
            </value>
            <value>
                <fullName>Vendedor Humano</fullName>
            </value>
            <value>
                <fullName>Agente AI</fullName>
            </value>
            <value>
                <fullName>Agente Externo</fullName>
            </value>
            <value>
                <fullName>Promotoria Allianz</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>