force-app/main/default/objects/Opportunity/fields/Pago_Referidor_Status__c.field-meta.xml
<CustomField>
    <fullName>Pago_Referidor_Status__c</fullName>
    <label>Estado pago al referidor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Programado</fullName>
            </value>
            <value>
                <fullName>Pagado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>