force-app/main/default/objects/Opportunity/fields/Periodo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Pago__c</fullName>
    <label>Periodo Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periodo_Pago</valueSetName>
    </valueSet>
</CustomField>