force-app/main/default/objects/Opportunity/fields/Poliza_a_Renovar__c.field-meta.xml
<CustomField>
    <fullName>Poliza_a_Renovar__c</fullName>
    <label>Póliza a Renovar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>