force-app/main/default/objects/Opportunity/fields/Poliza_Renovar__c.field-meta.xml
<CustomField>
    <fullName>Poliza_Renovar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Poliza Renovar</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tech_Seguro__c.Estatus__c</field>
            <operation>equals</operation>
            <value>Por renovar</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tech_Seguro__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>