force-app/main/default/objects/Opportunity/fields/Precalificacion__c.field-meta.xml
<CustomField>
    <fullName>Precalificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup a la Precalificación que originó esta oportunidad. El Score ICP y el motivo viven en Precalificacion__c (no en Opportunity) para mantener separación semántica.</description>
    <label>Precalificación</label>
    <referenceTo>Precalificacion__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>