force-app/main/default/objects/Opportunity/fields/Prima_Estimada_MXN__c.field-meta.xml
<CustomField>
    <fullName>Prima_Estimada_MXN__c</fullName>
    <description>Poblada por Oli/SDR al obtener cotizacion. Base para ruteo a vendedor senior.</description>
    <label>Prima estimada (MXN)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>