force-app/main/default/objects/Opportunity/fields/Prima_Total__c.field-meta.xml
<CustomField>
    <fullName>Prima_Total__c</fullName>
    <label>Prima Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>