force-app/main/default/objects/Opportunity/fields/Primer_Contacto_Canal__c.field-meta.xml
<CustomField>
    <fullName>Primer_Contacto_Canal__c</fullName>
    <label>Canal primer contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Canales_Contacto_GVS</valueSetName>
    </valueSet>
</CustomField>