force-app/main/default/objects/Opportunity/fields/Primer_Contacto_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Primer_Contacto_Timestamp__c</fullName>
    <description>Set automatico por Flow cuando Oli o SDR Agent toca por primera vez el registro.</description>
    <label>Fecha primer contacto</label>
    <type>DateTime</type>
</CustomField>