force-app/main/default/objects/Opportunity/fields/Producto_Principal__c.field-meta.xml
<CustomField>
    <fullName>Producto_Principal__c</fullName>
    <label>Producto Principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>