force-app/main/default/objects/Opportunity/fields/Puede_Reactivarse__c.field-meta.xml
<CustomField>
    <fullName>Puede_Reactivarse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Puede reactivarse (reciclaje)</label>
    <type>Checkbox</type>
</CustomField>