force-app/main/default/objects/Opportunity/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <description>Auto, GMM, Vida, PPR, Daños, Fianzas, Membresía.</description>
    <label>Ramo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ramos_GVS</valueSetName>
    </valueSet>
</CustomField>