force-app/main/default/objects/Opportunity/fields/Referidor__c.field-meta.xml
<CustomField>
    <fullName>Referidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cuenta del cliente que trajo este prospecto.</description>
    <label>Referidor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades referidas</relationshipLabel>
    <relationshipName>Oportunidades_Referidas</relationshipName>
    <type>Lookup</type>
</CustomField>