force-app/main/default/objects/Opportunity/fields/Seguro_origen__c.field-meta.xml
<CustomField>
    <fullName>Seguro_origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seguro origen (renovación)</label>
    <referenceTo>Seguro__c</referenceTo>
    <relationshipLabel>Oportunidades de renovación</relationshipLabel>
    <relationshipName>Oportunidades_renovacion</relationshipName>
    <type>Lookup</type>
</CustomField>