force-app/main/default/objects/Opportunity/fields/Subproducto__c.field-meta.xml
<CustomField>
    <fullName>Subproducto__c</fullName>
    <label>Subproducto</label>
    <length>120</length>
    <type>Text</type>
</CustomField>