force-app/main/default/objects/Opportunity/fields/Tech_Cotizacion_Externa__c.field-meta.xml
<CustomField>
    <fullName>Tech_Cotizacion_Externa__c</fullName>
    <label>ID Cotización Externa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>