force-app/main/default/objects/Opportunity/fields/Tiempo_Respuesta_Minutos__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Respuesta_Minutos__c</fullName>
    <formula>IF(ISBLANK(Primer_Contacto_Timestamp__c), null, ROUND((NOW() - Primer_Contacto_Timestamp__c) * 24 * 60, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo respuesta (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>