force-app/main/default/objects/Opportunity/fields/Tipo_Originador__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Originador__c</fullName>
    <label>Tipo originador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Consultivo</fullName>
            </value>
            <value>
                <fullName>Promotoría</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>