force-app/main/default/objects/Opportunity/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>UTM Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>