force-app/main/default/objects/Opportunity/fields/Vendedor_A__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>Tech_Vendedor__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>