force-app/main/default/objects/Opportunity/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <inlineHelpText>Vigencia en Meses</inlineHelpText>
    <label>Vigencia</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>