force-app/main/default/objects/Opportunity/fields/Vigencia_Fin__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Fin__c</fullName>
    <label>Fin de Vigencia</label>
    <type>Date</type>
</CustomField>