force-app/main/default/objects/Opportunity/fields/Vigencia_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Inicio__c</fullName>
    <label>Inicio de Vigencia</label>
    <type>Date</type>
</CustomField>