force-app/main/default/objects/Opportunity/recordTypes/Cliente_Existente_Nuevo_Producto.recordType-meta.xml
<RecordType>
    <fullName>Cliente_Existente_Nuevo_Producto</fullName>
    <active>true</active>
    <businessProcess>Oportunidades</businessProcess>
    <description>Venta cruzada: nuevo producto para un cliente existente</description>
    <label>Cliente Existente – Nuevo Producto</label>
</RecordType>