force-app/main/default/objects/Opportunity/recordTypes/Fianza_Nueva.recordType-meta.xml
<RecordType>
    <fullName>Fianza_Nueva</fullName>
    <active>true</active>
    <businessProcess>Oportunidades</businessProcess>
    <description>Oportunidad de venta de una fianza nueva</description>
    <label>Fianza Nueva</label>
</RecordType>