force-app/main/default/objects/Opportunity/recordTypes/Renovacion_Seguro.recordType-meta.xml
<RecordType>
    <fullName>Renovacion_Seguro</fullName>
    <active>true</active>
    <businessProcess>Oportunidades</businessProcess>
    <description>Renovación de una póliza de seguro existente</description>
    <label>Renovación de Seguro</label>
</RecordType>