force-app/main/default/objects/Opportunity/recordTypes/Seguro_Nuevo.recordType-meta.xml
<RecordType>
    <fullName>Seguro_Nuevo</fullName>
    <active>true</active>
    <businessProcess>Oportunidades</businessProcess>
    <description>Oportunidad de venta de un seguro nuevo</description>
    <label>Seguro Nuevo</label>
</RecordType>