force-app/main/default/objects/Opportunity/validationRules/No_cerrar_Perdida_sin_actividad.validationRule-meta.xml
<ValidationRule>
    <fullName>No_cerrar_Perdida_sin_actividad</fullName>
    <active>true</active>
    <description>No permite cerrar una Oportunidad como Perdida sin al menos una actividad registrada. Forza documentar el motivo del cierre.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISBLANK(LastActivityDate)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>No se puede cerrar la Oportunidad como Perdida sin al menos una actividad registrada (llamada, email o reunion). Documenta el contacto antes de cerrar.</errorMessage>
</ValidationRule>