force-app/main/default/objects/Opportunity/validationRules/Renovacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Renovacion</fullName>
    <active>true</active>
    <description>No se puede crear/guardar una renovación sin póliza origen.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Type, &quot;Renovación&quot;),
    ISBLANK(Poliza_Renovar__c)
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>No se puede crear/guardar una renovación sin póliza origen.</errorMessage>
</ValidationRule>