force-app/main/default/objects/Opportunity/validationRules/tech_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>tech_Closed</fullName>
    <active>true</active>
    <description>Todo cierre perdido debe tener motivo.</description>
    <errorConditionFormula>IF(ISPICKVAL (StageName, &apos;Cierre gando&apos;),
   IF( 
     OR( ISPICKVAL (Ramo__c, &apos;&apos;),
         Producto__c = &apos;&apos;,
         Institucion__c = &apos;&apos;,
         ISPICKVAL (Ramo__c, &apos;&apos;)
       )
,true,false
   ),false)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Todo cierre perdido debe tener motivo.</errorMessage>
</ValidationRule>