force-app/main/default/objects/Opportunity/validationRules/tech_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>tech_Closed_Lost</fullName>
    <active>true</active>
    <description>Todo cierre perdido debe tener motivo.</description>
    <errorConditionFormula>IF(ISPICKVAL (StageName, &apos;Cierre perdido&apos;),
   IF( ISPICKVAL (Motivo_Perdida__c, &apos;&apos;),true,false
   ),false)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Todo cierre perdido debe tener motivo.</errorMessage>
</ValidationRule>